Ensure spacing between page summary and following UL

--- a/src/scss/3_components/content/cards.scss
+++ b/src/scss/3_components/content/cards.scss
@@ -496,7 +496,8 @@ a.card {
           margin: 0 0 1em;
         }
 
-        p + ul {
+        p + ul,
+        .page-summary + ul {
           margin-top: .5em;
         }
 
